fixed arrow-left-wrap

--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -1520,7 +1520,9 @@ a:hover {
 
 .firstblock .arrow-left-wrap {
   display: flex;
+  display: -webkit-flex;
   justify-content: right;
+  -webkit-justify-content: right;
   width: 72%;
 }
 
